app/src/test/resources/programs/valid/stdlib/print_square.exe
// Program to print the square of given number

foreign foo print_int(num: Int) -> Nope

foo main() -> Int = {
    let mut a: Int;
    a = scan_int();
    a = a*a;
    print_int(a);
    0
}
