app/src/test/resources/programs/invalid/blocks/unclosed_braces.exe
foo main() -> Int = {
    let mut a: Int;
    let mut b: Int;
    /**/
    let max = {
        if(a>b) then {
            a;
        } else {
            b;
        };
    0
}